--- a/TopShelfCustomer/TopShelfCustomer/Views/CreateNewAccountView.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/CreateNewAccountView.xaml
@@ -17,10 +17,10 @@
             <ContentView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"
                      BackgroundColor="{StaticResource Accent}" Grid.Row="0" Padding="0, 0, 0, 40" >
                 <StackLayout Orientation="Vertical">
-                    <ImageButton Source="back_orange.png" Command="{Binding OpenLoginCommand}" HorizontalOptions="Start" Margin="10,40,0,0" HeightRequest="40"/>
+                    <ImageButton Source="back_orange.png" Command="{Binding NavigateBackCommand}" HorizontalOptions="Start" Margin="10,40,0,0" HeightRequest="40"/>
                     <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="15">
                         <Image Source="TopShelfAppLogo.png" HeightRequest="60"/>
-                        <Label Text="TopShelf" FontSize="30" FontFamily="Fira Mono" VerticalTextAlignment="Center" TextColor="White" />
+                        <Label Text="TopShelf" FontSize="30" FontFamily="{StaticResource MediumFont}" VerticalTextAlignment="Center" TextColor="White" />
                     </StackLayout>
                 </StackLayout>
             </ContentView>
@@ -31,33 +31,36 @@
                     <StackLayout Orientation="Vertical">
 
                         <!-- Title Label -->
-                        <Label Text="Create a New Account" FontSize="26"
+                        <Label Text="Create a New Account" FontSize="26" FontFamily="{StaticResource NormalFont}"
                                TextColor="White" HorizontalOptions="Center" Margin="0,10,0,40"/>
 
                         <!-- Username -->
                         <StackLayout Orientation="Horizontal" Margin="0,20,0,20" HeightRequest="50">
                             <Image Source="news_48.png" HeightRequest="64" />
-                            <Entry Placeholder="Full Name" FontSize="16" WidthRequest="260" Text="{Binding UserRealNameInput, Mode=TwoWay}"
+                            <Entry Placeholder="Full Name" FontSize="16" WidthRequest="260"
+                                   Text="{Binding UserRealNameInput, Mode=TwoWay}" FontFamily="{StaticResource NormalFont}"
                                BackgroundColor="{StaticResource Accent}" PlaceholderColor="Gray"/>
                         </StackLayout>
                         
                         <!-- Email -->
                         <StackLayout Orientation="Horizontal" Margin="0,10,0,20" HeightRequest="50">
                             <Image Source="news_48.png" HeightRequest="64"  />
-                            <Entry Placeholder="E-mail" FontSize="16" WidthRequest="260" Text="{Binding EmailInput, Mode=TwoWay}"
-                               BackgroundColor="{StaticResource Accent}" PlaceholderColor="Gray"/>
+                            <Entry Placeholder="E-mail" FontSize="16" WidthRequest="260"
+                                   Text="{Binding EmailInput, Mode=TwoWay}" FontFamily="{StaticResource NormalFont}"
+                                   BackgroundColor="{StaticResource Accent}" PlaceholderColor="Gray"/>
                         </StackLayout>
 
                         <!-- Password -->
                         <StackLayout Orientation="Horizontal" Margin="0,10,0,20" HeightRequest="50">
                             <Image Source="secure_letter_48.png" HeightRequest="64"  />
-                            <Entry Placeholder="Password" IsPassword="True" WidthRequest="260" Text="{Binding PasswordInput, Mode=TwoWay}"
+                            <Entry Placeholder="Password" IsPassword="True" WidthRequest="260"
+                                   Text="{Binding PasswordInput, Mode=TwoWay}" FontFamily="{StaticResource NormalFont}"
                                FontSize="16" BackgroundColor="{StaticResource Accent}" PlaceholderColor="Gray"/>
                         </StackLayout>
 
                         <!-- Error Message -->
-                        <Label Text="{Binding CreationErrorMessage}" FontSize="20" TextColor="Red"
-                               IsVisible="{Binding IsErrorOnCreation}" HorizontalOptions="Center" FontAttributes="Bold"/>
+                        <Label Text="{Binding CreationErrorMessage}" FontSize="20" TextColor="Red" FontFamily="{StaticResource MediumFont}"
+                               IsVisible="{Binding IsErrorOnCreation}" HorizontalOptions="Center"/>
                     </StackLayout>
                 </ContentView>
             </ScrollView>
@@ -65,7 +68,7 @@
             <!-- Create Account Button -->
             <ContentView Grid.Row="2">
                 <Button Command="{Binding ConfirmNewAccountCommand}" BackgroundColor="{StaticResource Primary}" Text="Create Account"
-                        FontSize="20" TextColor="Black" HeightRequest="60"
+                        FontSize="20" TextColor="Black" HeightRequest="60" FontFamily="{StaticResource MediumFont}"
                         Margin="40,0,40,30" BorderColor="Black" BorderWidth="2"/>
             </ContentView>
         </Grid>
